# EdgeOS-Patches

./: README.md  pingscript  vrrpscript.txt  wlb-transition.sh
ddclient_3.10.0-ubnt/DEBIAN/: control  postrm  templates
ddclient_3.10.0-ubnt/etc/init.d/: ddclient
ddclient_3.10.0-ubnt/etc/ppp/ip-up.d/: ddclient
ddclient_3.10.0-ubnt/usr/sbin/: ddclient
ddclient_3.10.0-ubnt/usr/share/doc/ddclient/: README.md
ddclient_3.8.3-1.1.patch/DEBIAN/: conffiles  config  control
ddclient_3.8.3-1.1.patch/usr/sbin/: ddclient
ddclient_3.8.3-1.1.patch/usr/share/doc/ddclient/: copyright
ddclient_3.9.1.patch/DEBIAN/: control  prerm
ddclient_3.9.1.patch/etc/dhcp/dhclient-exit-hooks.d/: ddclient
ddclient_3.9.1.patch/usr/sbin/: ddclient
ubnt-radvd-patch/: ChangeLog  Makefile.am  configure.ac  gen-interface-templates.pl
ubnt-radvd-patch/debian/: changelog  control  postrm  preinst
ubnt-radvd-patch/interface-templates/ipv6/router-advert/prefix/node.tag/options/: node.def
ubnt-radvd-patch/scripts/: vyatta_gen_radvd.pl
vyatta-cfg-dhcp-server.patch/DEBIAN/: control  postinst  postrm  preinst
vyatta-cfg-dhcp-server.patch/opt/vyatta/sbin/: dnsmasq-dhcp-config.pl
vyatta-cfg-dhcp-server.patch/opt/vyatta/share/vyatta-cfg/templates/service/dhcp-server/lease-persist/: node.def
